crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractProperties.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\conformance\\classes\\classDeclarations\\classAbstractKeyword\\classAbstractProperties.ts"
---

# Input

```js
abstract class A {
    abstract x : number;
    public abstract y : number;
    protected abstract z : number;
    private abstract w : number;
    
    abstract m: () => void; 
    
    abstract foo_x() : number;
    public abstract foo_y() : number;
    protected abstract foo_z() : number;
    private abstract foo_w() : number;
}```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -2,12 +2,12 @@
   abstract x: number;
   public abstract y: number;
   protected abstract z: number;
-  private abstract w: number;
+  private abstract w : number;
 
   abstract m: () => void;
 
   abstract foo_x(): number;
   public abstract foo_y(): number;
   protected abstract foo_z(): number;
-  private abstract foo_w(): number;
+  private abstract foo_w() : number;
 }
```

# Output

```js
abstract class A {
  abstract x: number;
  public abstract y: number;
  protected abstract z: number;
  private abstract w : number;

  abstract m: () => void;

  abstract foo_x(): number;
  public abstract foo_y(): number;
  protected abstract foo_z(): number;
  private abstract foo_w() : number;
}
```


# Errors
```
classAbstractProperties.ts:5:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × 'private' cannot be used with 'abstract' modifier.
  
    ┌─ classAbstractProperties.ts:5:5
    │
  5 │     private abstract w : number;
    │     ^^^^^^^
  
  i 'abstract' modifier
  
    ┌─ classAbstractProperties.ts:5:13
    │
  5 │     private abstract w : number;
    │             ^^^^^^^^
  
classAbstractProperties.ts:12:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × 'private' cannot be used with 'abstract' modifier.
  
     ┌─ classAbstractProperties.ts:12:5
     │
  12 │     private abstract foo_w() : number;
     │     ^^^^^^^
  
  i 'abstract' modifier
  
     ┌─ classAbstractProperties.ts:12:13
     │
  12 │     private abstract foo_w() : number;
     │             ^^^^^^^^
  

```


